# auve_homework

./: Dockerfile  build_image.sh  entrypoint.sh  run.sh
catkin_ws/src/traffic_light_fetcher/: CMakeLists.txt  package.xml
catkin_ws/src/traffic_light_fetcher/data/: rqt.perspective
catkin_ws/src/traffic_light_fetcher/launch/: test.launch
catkin_ws/src/traffic_light_fetcher/src/: analysis.cpp  analysis.h  fetcher.cpp  fetcher.h  traffic_light_analysis.cpp  traffic_light_fetcher.cpp
