<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_fetcher</name>
  <version>1.0.0</version>
  <description>The traffic_light_fetcher package</description>

  <maintainer email="anton@angri.ch">Anton G</maintainer>

  <license>Apache License 2.0</license>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
</package>
